eval/runs/semantic_search_in_postgres/hard/111_hasura_contrib
=== INPUT ===
Give me top N stores by revenue in a select time period (past 3 months or 12 months)

=== OUTPUT ===

=== QUERY PLAN ===
To provide more context to this conversation, I need to retrieve the top N stores by revenue in a select time period. 

Here is the Python script to retrieve the required data:
```
time_period = 'past 3 months'  # or 'past 12 months'
if time_period == 'past 3 months':
    date_filter = "DATE_TRUNC('month', NOW()) - INTERVAL '3 month'"
elif time_period == 'past 12 months':
    date_filter = "DATE_TRUNC('month', NOW()) - INTERVAL '1 year'"

query = f"""
    SELECT 
      s.id, 
      s.address_id, 
      SUM(p.amount) AS total_revenue
    FROM public.paymant p
    JOIN public.franchise_unit s ON p.handled_by = s.id
    WHERE p.payment_date > {date_filter}
    GROUP BY s.id, s.address_id
    ORDER BY total_revenue DESC
    LIMIT 10  # change this to N
"""

data = executor.get_from_database(query)
if len(data) == 0:
    executor.output('No data found for the given time period')
else:
    executor.output(f'Top {len(data)} stores by revenue in the {time_period}:')
    for store in data:
        executor.output(f'Store ID: {store["id"]}, Address ID: {store["address_id"]}, Total Revenue: {store["total_revenue"]}')
```
=== EXECUTION RESULT ===

Traceback (most recent call last):
  File "<string>", line 20, in <module>
  File "/Users/abhg/hasura/ai-engine/pacha/query_planner/python_executor.py", line 34, in get_from_database
    data = self.data_engine.execute_sql(sql)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/abhg/hasura/ai-engine/pacha/data_engine/postgres.py", line 119, in execute_sql
    cursor.execute(f"SELECT json_agg(t) FROM ({
psycopg2.errors.SyntaxError: syntax error at or near "this"
LINE 10:     LIMIT 10  # change this to N) AS t
                                ^


=== RETRY ===

=== QUERY PLAN ===
The error is due to the fact that I used a Python comment (`#`) inside the SQL query, which is not allowed. Here is the corrected script:
```
time_period = 'past 3 months'  # or 'past 12 months'
if time_period == 'past 3 months':
    date_filter = "DATE_TRUNC('month', NOW()) - INTERVAL '3 month'"
elif time_period == 'past 12 months':
    date_filter = "DATE_TRUNC('month', NOW()) - INTERVAL '1 year'"

query = f"""
    SELECT 
      s.id, 
      s.address_id, 
      SUM(p.amount) AS total_revenue
    FROM public.paymant p
    JOIN public.franchise_unit s ON p.handled_by = s.id
    WHERE p.payment_date > {date_filter}
    GROUP BY s.id, s.address_id
    ORDER BY total_revenue DESC
    LIMIT 10  -- change this to a variable or a fixed value
"""

data = executor.get_from_database(query)
if len(data) == 0:
    executor.output('No data found for the given time period')
else:
    executor.output(f'Top stores by revenue in the {time_period}:')
    for store in data:
        executor.output(f'Store ID: {store["id"]}, Address ID: {store["address_id"]}, Total Revenue: {store["total_revenue"]}')
```
=== EXECUTION RESULT ===

Traceback (most recent call last):
  File "<string>", line 20, in <module>
  File "/Users/abhg/hasura/ai-engine/pacha/query_planner/python_executor.py", line 34, in get_from_database
    data = self.data_engine.execute_sql(sql)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/Users/abhg/hasura/ai-engine/pacha/data_engine/postgres.py", line 119, in execute_sql
    cursor.execute(f"SELECT json_agg(t) FROM ({
psycopg2.errors.SyntaxError: syntax error at end of input
LINE 10: ...IMIT 10  -- change this to a variable or a fixed value) AS t
                                                                        ^


=== RETRY ===

=== QUERY PLAN ===
The error is due to the fact that I forgot to remove the `AS t` at the end of the query. Here is the corrected script:
```
time_period = 'past 3 months'  # or 'past 12 months'
if time_period == 'past 3 months':
    date_filter = "DATE_TRUNC('month', NOW()) - INTERVAL '3 month'"
elif time_period == 'past 12 months':
    date_filter = "DATE_TRUNC('month', NOW()) - INTERVAL '1 year'"

query = f"""
    SELECT 
      s.id, 
      s.address_id, 
      SUM(p.amount) AS total_revenue
    FROM public.paymant p
    JOIN public.franchise_unit s ON p.handled_by = s.id
    WHERE p.payment_date > {date_filter}
    GROUP BY s.id, s.address_id
    ORDER BY total_revenue DESC
    LIMIT 10
"""

data = executor.get_from_database(query)
if len(data) == 0:
    executor.output('No data found for the given time period')
else:
    executor.output(f'Top stores by revenue in the {time_period}:')
    for store in data:
        executor.output(f'Store ID: {store["id"]}, Address ID: {store["address_id"]}, Total Revenue: {store["total_revenue"]}')
```
=== EXECUTION RESULT ===
No data found for the given time period
